Removed the display property from the peek-plugin-active-tasks classes.  This was causing a layout issue with the action buttons.

--- a/scss/style/_plugin_inbox.scss
+++ b/scss/style/_plugin_inbox.scss
@@ -29,7 +29,6 @@
       /*
           Contains the info attributes unique to the .pl-inbox-item class
       */
-      display: table-cell;
       vertical-align: top;
     }
 
@@ -61,7 +60,6 @@
     /*
         Contains the read more link attributes unique to the .plugin-inbox class
     */
-    display: table-cell;
     background-color: $inbox_button_background;
 
     &:hover {
